--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -167,7 +167,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="newsletter">
-                        <h4>Newsletter</h4>
+                        <h4>Cập nhật</h4>
                         <p>Subscribe để nhận được thông tin mới nhất về các khóa học và các bài hướng dẫn.</p>
 
                         <div class="alert alert-success" ng-show="subscribeSuccess">
