--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/myCourses.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/myCourses.html.twig
@@ -7,7 +7,7 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="{{ path('home_page') }}">Home</a></li>
-                        <li class="active">Course</li>
+                        <li class="active">Khóa học</li>
                     </ul>
                 </div>
             </div>
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="progress" ng-show="loading">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                    <div class="progress-bar progress-bar-striped active width90pc" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                         <span class="sr-only">45% Complete</span>
                     </div>
                 </div>
@@ -41,17 +41,17 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="post-meta">
-                                    <span><i class="fa fa-calendar"></i><{ course.createdAt | date : "M/d/y" }></span>
+                                    <span><i class="fa fa-calendar"></i><{ course.createdAt | date : "d/M/y" }></span>
                                     <span ng-if="course.courseTags.length > 0"><i class="fa fa-tag"></i>
                                         <a href="#" ng-repeat="t in course.courseTags">
                                             <{ t.tag.text }>
                                         </a>
                                     </span>
-                                    <span><i class="fa fa-book"></i> <a href="#"><{ course.chapters.length }> Chapters</a></span>
+                                    <span><i class="fa fa-book"></i> <a href="#"><{ course.chapters.length }> Chương</a></span>
                                     <div class="btn-group pull-right" role="group" aria-label="Basic example">
-                                        <a href="<{ buildViewLink(course) }>" class="btn btn-primary padding-left-5 padding-right-5" target="_blank" title="view in another tab">View</a>
-                                        <a ng-click="edit($index)" class="btn btn-primary padding-left-5 padding-right-5" title="edit this course">Edit</a>
-                                        <a ng-click="showConfirm($index)" class="btn btn-primary padding-left-5 padding-right-5" title="delete this course">Delete</a>
+                                        <a href="<{ buildViewLink(course) }>" class="btn btn-primary padding-left-5 padding-right-5" target="_blank" title="view in another tab">Xem</a>
+                                        <a ng-click="edit($index)" class="btn btn-primary padding-left-5 padding-right-5" title="edit this course">Sửa</a>
+                                        <a ng-click="showConfirm($index)" class="btn btn-primary padding-left-5 padding-right-5" title="delete this course">Xóa</a>
                                     </div>
                                 </div>
                             </div>
@@ -75,14 +75,14 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h4 class="modal-title" id="myModalLabel">Confirm</h4>
+                        <h4 class="modal-title" id="myModalLabel">Xác nhận</h4>
                     </div>
                     <div class="modal-body">
-                        Are you sure to remove this course completely !
+                        Bạn có chắc muốn xóa khóa học này !
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" ng-click="delete()">OK</button>
-                        <button type="button" class="btn btn-primary" ng-click="hideConfirm()">Cancel</button>
+                        <button type="button" class="btn btn-primary" ng-click="hideConfirm()">Hủy</button>
                     </div>
                 </div>
             </div>
