--- a/src/Viettut/Bundles/WebBundle/Resources/views/Home/comingSoon.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Home/comingSoon.html.twig
@@ -18,9 +18,8 @@
         </div>
         <div class="row">
             <div class="col-md-12 center">
-                <h1 class="short small">OUR WEBSITE IS COMING SOON</h1>
-                <p class="short lead">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
+                <h1 class="short small">TÍNH NĂNG SẮP HOÀN THIỆN</h1>
+                <p class="short lead">Hiện tính năng này chưa hoàn thiện, bạn vui lòng ghé lại sau. Cảm ơn !</p>
             </div>
         </div>
         <div class="row">
@@ -32,7 +31,7 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="progress-bars">
                     <div class="progress-label">
-                        <span><strong>Conception:</strong> Finished</span>
+                        <span><strong>Ý tưởng:</strong> Xong</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-appear-progress-animation="100%">
@@ -40,7 +39,7 @@
                         </div>
                     </div>
                     <div class="progress-label">
-                        <span><strong>Design</strong></span>
+                        <span><strong>Thiết kế</strong></span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-appear-progress-animation="85%" data-appear-animation-delay="300">
@@ -48,7 +47,7 @@
                         </div>
                     </div>
                     <div class="progress-label">
-                        <span><strong>Development</strong></span>
+                        <span><strong>Phát triển</strong></span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-primary" data-appear-progress-animation="75%" data-appear-animation-delay="600">
@@ -66,7 +65,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <div class="newsletter">
-                    <h5>subscribe to get notification once the page is completed !</h5>
+                    <h5>subscribe để nhận thông tin khi tính năng này hoàn thiện !</h5>
                 </div>
             </div>
         </div>
