--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,7 +31,7 @@
                 </a>
             </div>
             <div class="search">
-                <form id="searchForm" method="get">
+                <form id="searchForm" method="get" action="/public/search">
                     <div class="input-group">
                         <input type="text" class="form-control search" name="q" id="q" placeholder="Search..." required>
 								<span class="input-group-btn">
