--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
                         <a href="#"><i class="fa fa-angle-right"></i>Liên Hệ</a>
                     </li>
                     <li class="phone">
-                        <span><i class="fa fa-phone"></i>0902 154 954</span>
+                        <span><i class="fa fa-phone"></i>0961.61.4387</span>
                     </li>
                 </ul>
             </nav>
@@ -203,7 +203,7 @@
                         <h4>Liên Hệ</h4>
                         <ul class="contact">
                             {#<li><p><i class="fa fa-map-marker"></i> <strong>Address:</strong> 1234 Street Name, City Name, United States</p></li>#}
-                            <li><p><i class="fa fa-phone"></i> <strong>Phone:</strong>0902 154 954</p></li>
+                            <li><p><i class="fa fa-phone"></i> <strong>Phone:</strong>0961.61.4387</p></li>
                             <li><p><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:support@viettut.com">support@viettut.com</a></p></li>
                         </ul>
                     </div>
