--- a/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Course/detail.html.twig
@@ -25,10 +25,10 @@
                                     <img class="img-responsive" src="{{ course.imagePath }}" alt="cover image">
                                 </div>
                             </div>
-                            <div class="post-date">
-                                <span class="day">{{ course.createdAt | date('d') }}</span>
-                                <span class="month">{{ course.createdAt | date('F') | slice(0, 3) }}</span>
-                            </div>
+                            {#<div class="post-date">#}
+                                {#<span class="day">{{ course.createdAt | date('d') }}</span>#}
+                                {#<span class="month">{{ course.createdAt | date('F') | slice(0, 3) }}</span>#}
+                            {#</div>#}
                             <div class="post-content">
                                 <h2 class="text-center"><a href="#">{{ course.title }}</a></h2>
                                 <div class="post-meta">
@@ -43,7 +43,7 @@
                                     <span class="pull-right"><i class="fa fa-comments"></i> <a href="#">{{ course.comments | length }} Bình luận</a></span>
                                 </div>
                                 <hr class="tall"/>
-                                <textarea class="hidden" id="introduce">{{ course.introduce }}</textarea>
+                                <textarea class="hidden" id="introduce">{{ course.introduce | raw }}</textarea>
                                 <wiz-markdown content="introduce" class="markdown-body"></wiz-markdown>
                                 {% if lastChapter %}
                                     <div class="row">
