--- a/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/detail.html.twig
+++ b/src/Viettut/Bundles/WebBundle/Resources/views/Tutorial/detail.html.twig
@@ -26,10 +26,10 @@
                 <div class="row">
                     <div class="blog-posts single-post">
                         <article class="post post-large blog-single-post">
-                            <div class="post-date">
-                                <span class="day">{{ tutorial.createdAt | date('d') }}</span>
-                                <span class="month">{{ tutorial.createdAt | date('F') | slice(0, 3) }}</span>
-                            </div>
+                            {#<div class="post-date">#}
+                                {#<span class="day">{{ tutorial.createdAt | date('d') }}</span>#}
+                                {#<span class="month">{{ tutorial.createdAt | date('F') | slice(0, 3) }}</span>#}
+                            {#</div>#}
                             <div class="post-content">
                                 <h2 class="text-center"><a href="#">{{ tutorial.title }}</a></h2>
                                 <div class="post-meta">
@@ -42,7 +42,7 @@
                                     <span class="pull-right"><i class="fa fa-comments"></i> <a href="#">{{ tutorial.comments | length }} Comments</a></span>
                                 </div>
                                 <hr class="tall"/>
-                                <textarea class="hidden" id="content">{{ tutorial.content }}</textarea>
+                                <textarea class="hidden" id="content" >{{ tutorial.content | raw}}</textarea>
                                 <wiz-markdown content="content" class="markdown-body"></wiz-markdown>
                                 <div class="row col-md-12" ng-controller="CommentController">
                                     <div class="post-block post-comments clearfix row col-md-12">
